@@ -1,3 +1,7 @@
+2013-01-18  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	Add license header to spkmodem-recv.c.
+
 2013-01-17  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Rewrite spkmodem to use PIT for timing. Double the speed.
